[package]
name = "dao-pallet"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
codec = { package = "parity-scale-codec", version = "~3.6", default-features = false, features = ["derive"] }
scale-info = { version = "~2.9", default-features = false, features = ["derive"] }
frame-support = { version = "~24.0", default-features = false }
frame-system = { version = "~24.0", default-features = false }
hex = "~0.4"
pallet-timestamp = { version = "~23.0" }
sp-io = { version = "~26.0", default-features = false }
sp-runtime = { version = "~27.0", default-features = false }
sp-std = { version = "~11.0", default-features = false }

[dev-dependencies]
pallet-balances = { version = "~24.0" }
sp-core = { version = "~24.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "sp-runtime/try-runtime",
]
